<resources>
    <string name="app_name">Flash Mobile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spinner_message">Procesando solicitud</string>
    <string name="flash_mobile_peru">Flash Mobile Perú</string>
    <string name="title_carrusel_1">Bienvenido a tu app\n Activa tu Flash Perú</string>
    <string name="description_carrusel_1">Completa las activaciones que hayas iniciado desde nuestro sitio web o empieza nuevas solicitudes de activación.</string>
    <string name="title_carrusel_2">Elige qué deseas hacer</string>
    <string name="description_carrusel_2">Comienza procesos de portabilidad para SIM Cards o activa nuevos números Flash</string>
    <string name="title_carrusel_3">Disfruta tu Flash Mobile</string>
    <string name="description_carrusel_3">Por este medio sólo puedes activar 5 SIM Cards por DNI. Para activar más comunícate con nuestro equipo de Servicio a clientes</string>
    <string name="get_started">Iniciar</string>
    <string name="welcome_to_activa_tu_flash">Bienvenido</string>
    <string name="enter_your_dni">Ingresa tu DNI:</string>
    <string name="digits">8 dígitos</string>
    <string name="go">Buscar</string>
    <string name="option_help">Chatea con un agente</string>
    <string name="option_help_description">¿Tienes algún problema? Charla con nuestro equipo de Servicio a clientes</string>
    <string name="web_activation_orders">Órdenes de activación</string>
    <string name="web_activation_orders_description">Lista de órdenes que iniciaste desde nuestro sitio web. Elige las que quieras completar.</string>
    <string name="web_activation_orders_info">Recuerda que sólo se permite hacer 5 activaciones por DNI por este canal.</string>
    <string name="web_activation_order_type_ph">Activación y portabilidad </string>
    <string name="web_activation_order_date_ph">15/01/2020 at 09:45 am </string>
    <string name="web_activation_order_number_ph">Número telefónico:&#160;</string>
    <string name="web_activation_order_new">Activación de nuevo número telefónico</string>
    <string name="flash_activation_form">Formato de activación</string>
    <string name="flash_activation_form_subtitle">Completa la siguiente información:</string>
    <string name="name">Nombre</string>
    <string name="paternal_last_name">Apellido paterno</string>
    <string name="maternal_last_name">Apellido materno</string>
    <string name="date_of_birth">Fecha de nacimiento</string>
    <string name="email_account">Correo electrónico</string>
    <string name="usually_populated_center">Centro poblado de Uso Frecuente</string>
    <string name="there_are_service_in_city">¿Hay cobertura en el Centro Poblado de Uso Frecuente?</string>
    <string name="do_you_not_know_your_city_but_your_decide_accept">¿No conoces tu Centro Poblado de Uso Frecuente o no cuentas con cobertura, pero dejas constancia que quieres contratar el servicio?</string>
    <string name="Yes">Si</string>
    <string name="No">No</string>
    <string name="do_you_want_to_port">¿Quieres portar tu número?</string>
    <string name="do_you_want_to_port_negative_answer">No, quiero tener un nuevo número</string>
    <string name="do_you_want_to_port_positve_answer">Sí, quiero portar mi número actual</string>
    <string name="who_refered_you">¿Quién te refirió?</string>
    <string name="sponsor_tid_optional">Código de Brand Leader</string>
    <string name="text_continue">Siguiente</string>
    <string name="port_your_phone_number">Porta tu número telefónico</string>
    <string name="your_phone_number">Tu número telefónico</string>
    <string name="nine_digits">9 dígitos</string>
    <string name="confirm_your_phone_number">Confirma tu número</string>
    <string name="current_mobile_operator">Operador móvil actual</string>
    <string name="select">Selecciona</string>
    <string name="plan_type">Tipo de plan</string>
    <string name="check_info">Todos los números de Flash Mobile son de prepago. Cuando te cambies con nosotros, tu servicio siempre será de prepago.</string>
    <string name="port_your_phone_number_info">El proceso de portabilidad tarda 24 horas en completarse.</string>
    <string name="confirmr_your_information">Confirma tu información</string>
    <string name="summay">Resumen</string>
    <string name="confirm">Confirmar</string>
    <string name="modify">Editar</string>
    <string name="dni">DNI:\u0020</string>
    <string name="email">Correo:\u0020</string>
    <string name="city">Centro poblado:\u0020</string>
    <string name="sponsor_tid">Brand Leader</string>
    <string name="number_to_port">Número a portar:\u0020</string>
    <string name="mobile_operator">Operador móvil:\u0020</string>
    <string name="term_and_conditions">Términos y condiciones</string>
    <string name="term_and_conditions_detail">I. FLash Mobile Perú</string>
    <string name="term_and_conditions_check_accept">He leído los términos y condiciones| del servicio. Valido que mi información es verdadera.</string>
    <string name="privacy_policy_personal_data_check_accept">He leído y acepto la| Política de privacidad de datos personales</string>
    <string name="conditions_applicable_to_portability_check_accept">Declaro haber leído y estar informado sobre las| condiciones aplicables a la portabilidad| que he solicitado</string>
    <string name="accept">Aceptar</string>
    <string name="sim_validation">Validación de SIM Card</string>
    <string name="sim_validation_subtitle">Información del ICCID</string>
    <string name="sim_validation_description">El ICCID (identiﬁcador de la tarjeta del circuito integrado) es un número único de cada SIM, que sirve para identiﬁcar el país, la red y el circuito a los que pertenece. </string>
    <string name="sim_validation_tip_title">Tips para un escaneo exitoso</string>
    <string name="sim_validation_tip_one">1.| Saca la SIM Card del empaque para que se vea como en la imagen de arriba
    \n\n|2.| Limpia la cámara de tu celular antes de iniciar
    \n\n|3.| Evita generar sombras sobre la SIM Card al momento de hacer el proceso
    \n\n|4.| Haz el proceso sobre un fondo uniforme. De preferencia en una superficie de un solo tono</string>
    <string name="sim_validation_option_two">Ingresa el número PUK</string>
    <string name="view_recomendations">Ver las recomendaciones</string>
    <string name="qr_barcode_scanner">Qr BarCode Scanner</string>
    <string name="scan_completed">Scan completed</string>
    <string name="next">Siguiente</string>
    <string name="address">Dirección</string>
    <string name="step9_more_info">Presione "Continuar" para iniciar la captura de fotos de su dedo. Coloque su dedo en la vista de la cámara trasera del teléfono, más o menos en la guía. Manténgase estable cuando esté verde.</string>
    <string name="searching">Buscando</string>
    <string name="right_finger">Pulgar derecho</string>
    <string name="success">!Éxito!</string>
    <string name="search_complete">Exploración completa</string>
    <string name="sim_activated">Ingresa manualmente el número PUK</string>
    <string name="scan_correctly">Forma correcta de escanear una SIM Card</string>
    <string name="sim_activated_successfully">¡Estamos activando tu SIM Card!</string>
    <string name="sim_activated_greetings">A partir de este momento puedes recargar tu línea para disfrutar de todos los beneficios Flash</string>
    <string name="sim_activated_greetings_portability">Estás a solo un paso de completar tu portabilidad</string>
    <string name="sim_activated_fl_message">Te enviamos un correo de confirmación con una copia del contrato de abonado. A partir de este momento puedes recargar, como mínimo, S/1 para disfrutar de todos los beneficios de tu línea Flash</string>
    <string name="sim_activated_fl_message_portability">Si no puedes completar la portabilidad en la app o se genera algún error, ¡no te preocupes! Puedes hacerlo creando tu cuenta Flash en |mi.flashmobile.pe</string>
    <string name="sim_finalize">Finalizar</string>
    <string name="sim_finalize_portability">Portar mi número</string>
    <string name="sim_success">Proceso completado</string>
    <string name="sim_success_portability">Proceso completado</string>
    <string name="biometric">Validación biométrica</string>
    <string name="biometric_title">Selecciona la huella dactilar</string>
    <string name="biometric_description">que quieres utilizar para la validación biométrica. Al usar tu huella aceptas los términos y condiciones del servicio, y de la portabilidad si aplicara, presentados anteriormente.</string>
    <string name="error_detail">¡Ocurrió un error! En este momento no pudimos confirmar que tus huellas digitales coincidan con el DNI ingresado en el formulario de inicio.</string>
    <string name="message_support">Has alcanzado el límite de intentos para el proceso biométrico de identificación de huella dactilar. Debes iniciar el proceso nuevamente.</string>
    <string name="message_support_bottom">Si ya intentaste el proceso varias veces y aún no logras confirmar que tus huellas digitales coincidan con el DNI ingresado en el formulario de inicio; debes realizar el proceso de activación por excepción.</string>
    <string name="look_biometric_tutorial">Ver tutorial de biometría</string>
    <string name="exception_activation">Realiza tu activación por excepción</string>
    <string name="try_again">Intenta de nuevo</string>
    <string name="finished">Terminar</string>
    <string name="api_generic_error">Validación fallida</string>
    <string name="error_detail_iccid">Ocurrió un error durante el proceso de validación.</string>
    <string name="message_support_iccid">Intenta de nuevo o contacta a nuestro Centro de Servicio a clientes.</string>
    <string name="error_in_scan">Error en el escaneo</string>
    <string name="error_in_barcode_validation">Error en la validación del ICCID</string>
    <string name="error_remember_total_intents">Recuerda que tienes 3 intentos de escaneo, de lo contrario tendrás que realizar el proceso de nuevo.\nSigue las recomendaciones para un escaneo exitoso.</string>
    <string name="error_sim_card_activated">Esta SIM Card ya está activa</string>
    <string name="error_sim_card_activated_description">Puedes insertarla en tu celular para obtener tu línea Flash y empezar a llamar y navegar.</string>
    <string name="error_sim_card_activated_or_can">O puedes:</string>
    <string name="error_sim_card_activated_solicitar_port">Solicitar tu portabilidad</string>
    <string name="error_sim_card_activated_view_status">Ver el estado de tu portabilidad</string>
    <string name="chatExternalLink">https://atentoperu.s1gateway.com/pe/9de1462b40bef299137ee42f9750bd11658761d203da0b134d5629abf78120ccb43a0ed41c5ea8f7</string>
    <string name="empty">\u00A0</string>
    <string name="alert_quit_title">¿Deseas abandonar la activación en curso?</string>
    <string name="alert_quit_description">Si lo haces, se perderá tu información y tendrás que comenzar un nuevo proceso de activación.</string>
    <string name="dropdown_required">Campo Obligatorio</string>
    <string name="dni_length">Asegúrate de escribir un número de DNI de 8 dígitos</string>
    <string name="datetime_format">yyyy-MM-dd HH:mm:ss</string>
    <string name="title_activation">Activación de nuevo número telefónico</string>
    <string name="title_activation_portability">Activación y portabilidad</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="error_alert">¡Ha ocurrido un error!</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_close">Cerrar</string>
    <string name="temp_left_finger">Pulgar izquierdo</string>
    <string name="temp_right_finger">Pulgar derecho</string>
    <string name="lbl_iccid">ICCID:</string>
    <string name="date_format">dd/mm/aa</string>
    <string name="email_wildcard">\@</string>
</resources>